2006-05-23  Archie Cobbs  <archie@dellroad.org>

	* vm/reference/java/lang/VMClassLoader.java: fix static initializer
	ordering problem.

2006-05-23  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/AbstractLayoutCache.java: Coding style fixes,
	* javax/swing/tree/DefaultMutableTreeNode.java: Likewise,
	* javax/swing/tree/DefaultTreeCellRenderer.java: Likewise,
	* javax/swing/tree/DefaultTreeModel.java: Likewise,
	* javax/swing/tree/DefaultTreeSelectionModel.java: Likewise,
	* javax/swing/tree/ExpandVetoException.java: Likewise,
	* javax/swing/tree/FixedHeightLayoutCache.java: Likewise,
	* javax/swing/tree/RowMapper.java: Likewise,
	* javax/swing/tree/TreeNode.java: Likewise,
	* javax/swing/tree/TreeSelectionModel.java: Likewise,
	* javax/swing/tree/VariableHeightLayoutCache.java: Likewise.

2006-05-23  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/DefaultTreeCellRenderer.java
	(DefaultTreeCellRenderer): Changed key for 
	setBackgroundNonSelectionColor(),
	plus API docs all over.

2006-05-23  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
	
	PR 27680
	* javax/swing/JTable.java (booleanInvertingEditor): New field.
	(defaultEditorsByColumnClass, defaultRenderersByColumnClass):
	Initialise in constructor. (columnMoved): Cancel editing.
	(createDefaultEditors): Rewritten. (editCellAt):
	Just invert the value if this is a boolean cell. 
	(initialiseLocalVars): Do not initialise renderer and editor tables.
	(setUI): Create editors and renderers here.

2006-05-23  Robert Schuster  <robertschuster@fsfe.org>

	* examples/gnu/classpath/examples/awt/Demo.java:
	(MainWindow.MainWindow): Added ResolutionWindow and FullscreenWindow
	instance as subframe.
	(ResolutionWindow): New inner class.
	(FullscreenWindow): New inner class.

2006-05-23  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
	
	PR 27680
	* javax/swing/JTable.java (BooleanCellRenderer, IconCellRenderer):
	Set horizontal alignment to centered.
